user-skel/ansible_collections/ace_box/ace_box/roles/demo-rv-easytrade-gitlab/files/kustomize/overlays/production/easytrade-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easytrade-ingress
spec:
  rules:
  - host: easytrade_domain.production
    http:
      paths:
      - backend:
          service:
            name: frontendreverseproxy-easytrade
            port: 
              number: 80
        path: /
        pathType: ImplementationSpecific
